--- a/.opensource/project.json
+++ b/.opensource/project.json
@@ -2,7 +2,8 @@
   "name": "FlutterFire - MOVED",
   "platforms": [
     "Android",
-    "iOS"
+    "iOS",
+    "Web",
   ],
   "content": "FlutterFire.md",
   "related": [
